tests/fixtures/negative/skp1-unsupported-scrypt-n.hex
534b50310101010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000040000000000800000001
000000000000000001
00000000000000000000000000000000
